--- a/Cooleaf/Application Controllers/NPLoginViewController/NPLoginViewController.xib
+++ b/Cooleaf/Application Controllers/NPLoginViewController/NPLoginViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NPLoginViewController">
@@ -10,9 +10,14 @@
                 <outlet property="containerView" destination="2Kj-Us-JC6" id="gBF-Cn-jAI"/>
                 <outlet property="forgotPasswdBtn" destination="uo0-it-iqr" id="CRo-RS-rnN"/>
                 <outlet property="globalSpinner" destination="aLc-60-9zd" id="1zR-rP-Rt2"/>
+                <outlet property="loginHighlight" destination="bj2-pQ-PY1" id="3Pa-R1-aRN"/>
+                <outlet property="loginTabButton" destination="4Ng-9u-py0" id="BqH-3U-p6m"/>
                 <outlet property="logoView" destination="V5V-Bw-vuq" id="jG4-bb-AAI"/>
                 <outlet property="passwordField" destination="TEg-1U-ICU" id="wXu-o0-CTp"/>
                 <outlet property="signInBtn" destination="bWS-Zh-x6R" id="3P2-lt-WYq"/>
+                <outlet property="signUpButton" destination="RzA-cT-qAS" id="CjZ-Wq-Eug"/>
+                <outlet property="signupHighlight" destination="SEz-XS-06j" id="9cq-qy-4HL"/>
+                <outlet property="signupTabButton" destination="vXA-oz-kaP" id="VhF-EV-wxP"/>
                 <outlet property="spinner" destination="OT1-7P-z3w" id="y1g-Ua-yP5"/>
                 <outlet property="usernameField" destination="oe6-gj-IEC" id="qSa-h4-8nX"/>
                 <outlet property="view" destination="1" id="3"/>
@@ -26,9 +31,6 @@
                 <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="aLc-60-9zd" userLabel="Global spinner">
                     <rect key="frame" x="151" y="279" width="20" height="20"/>
                 </activityIndicatorView>
-                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="V5V-Bw-vuq">
-                    <rect key="frame" x="40" y="70" width="240" height="52"/>
-                </imageView>
                 <button opaque="NO" alpha="0.0" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uo0-it-iqr">
                     <rect key="frame" x="30" y="400" width="259" height="30"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
@@ -58,6 +60,20 @@
                             </state>
                             <connections>
                                 <action selector="signInTapped:" destination="-1" eventType="touchUpInside" id="YJd-q5-7OI"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RzA-cT-qAS">
+                            <rect key="frame" x="0.0" y="139" width="296" height="30"/>
+                            <color key="backgroundColor" red="0.30588235289999999" green="0.80392156859999997" blue="0.76862745099999996" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="296" id="EgM-4H-dIb"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="15"/>
+                            <state key="normal" title="SIGN UP">
+                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="signupButtonTapped:" destination="-1" eventType="touchUpInside" id="1SQ-aT-lLe"/>
                             </connections>
                         </button>
                         <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DCO-Av-0Uz" userLabel="Separator 2">
@@ -92,12 +108,47 @@
                         <constraint firstAttribute="bottom" secondItem="bWS-Zh-x6R" secondAttribute="bottom" constant="8" id="k2J-SX-J9R"/>
                     </constraints>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vXA-oz-kaP">
+                    <rect key="frame" x="0.0" y="0.0" width="160" height="70"/>
+                    <color key="backgroundColor" red="0.30588235289999999" green="0.80392156859999997" blue="0.76862745099999996" alpha="1" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="15"/>
+                    <state key="normal" title="LOG IN">
+                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="loginTabTapped:" destination="-1" eventType="touchUpInside" id="LmO-HD-vcC"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Ng-9u-py0">
+                    <rect key="frame" x="160" y="0.0" width="160" height="70"/>
+                    <color key="backgroundColor" red="0.30588235289999999" green="0.80392156859999997" blue="0.76862745099999996" alpha="1" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="15"/>
+                    <state key="normal" title="SIGN UP">
+                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="signupTabTapped:" destination="-1" eventType="touchUpInside" id="lNU-NM-erU"/>
+                    </connections>
+                </button>
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bj2-pQ-PY1">
+                    <rect key="frame" x="0.0" y="66" width="160" height="4"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
+                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SEz-XS-06j">
+                    <rect key="frame" x="160" y="66" width="160" height="4"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
+                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="V5V-Bw-vuq">
+                    <rect key="frame" x="40" y="118" width="240" height="52"/>
+                </imageView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="V5V-Bw-vuq" firstAttribute="centerX" secondItem="1" secondAttribute="centerX" id="aD0-9A-xtz"/>
-                <constraint firstItem="2Kj-Us-JC6" firstAttribute="top" secondItem="V5V-Bw-vuq" secondAttribute="bottom" constant="78" id="ieb-lW-91E"/>
-                <constraint firstItem="V5V-Bw-vuq" firstAttribute="top" secondItem="1" secondAttribute="top" constant="70" id="y86-VL-ZGH"/>
+                <constraint firstItem="2Kj-Us-JC6" firstAttribute="top" secondItem="V5V-Bw-vuq" secondAttribute="bottom" constant="30" id="ieb-lW-91E"/>
+                <constraint firstItem="V5V-Bw-vuq" firstAttribute="top" secondItem="1" secondAttribute="top" constant="100" id="y86-VL-ZGH"/>
             </constraints>
         </view>
         <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" id="wrX-6j-6aK">
